--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Documentation World</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
+
+    <!-- AOS ANIMATION LIBRARY SCRIPT -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   </head>
   <body>
       <header>
-        <div class="heading">
+        <div class="heading" data-aos="fade-up">
           <h1><strong><u>Documentation World</u></strong></h1>
         </div>
-        <div class="intro">
+        <div class="intro" data-aos="fade-down">
           <p>In this webiste we will provide you one of the best documentations for different programming languages. Here you
               can get documentation of almost every programming language, and this documentaions are totaly realiable because
               we had taken this documentation from very genuine source which are totly trust worthy.
@@ -37,7 +40,7 @@
           </div>
           <div class="row border">
             <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem;" data-aos="flip-up">
                 <img src="assets/html.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">By clicking on the button you will be directed towards the Dev Docs website for HTML documentations</p>
@@ -46,7 +49,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem;" data-aos="flip-left">
                 <img src="assets/css.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">By clicking on the button you will be directed towards the Dev Docs website for CSS documentations.</p>
@@ -55,7 +58,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem;" data-aos="flip-right">
                 <img src="assets/javascript.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">By clicking on the button you will be directed towards the MDN website for JavaScript documentations.</p>
@@ -64,7 +67,9 @@
               </div>
             </div>
           </div>
-          <div class="row border">
+
+
+          <div class="row border" data-aos="zoom-in">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
                 <img src="assets/python.png" class="card-img-top" alt="...">
@@ -93,6 +98,8 @@
               </div>
             </div>
           </div>
+
+
           <div class="row border">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
@@ -122,6 +129,8 @@
               </div>
             </div>
           </div>
+
+
           <div class="row border">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
@@ -151,6 +160,8 @@
               </div>
             </div>
           </div>
+
+
           <div class="row border">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
@@ -180,6 +191,8 @@
               </div>
             </div>
           </div>
+
+
           <div class="row border">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
@@ -209,6 +222,8 @@
               </div>
             </div>
           </div>
+
+
           <div class="row border">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
@@ -232,8 +247,19 @@
         </div>
       </main>
 
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"</script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"</script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"</script>
-      </body>
+      <!-- BOOTSTRAP SCRIPTS -->
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+      <!-- AOS ANIMATION LIBRARY SCRIPTS -->
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init({
+          offset: 300,
+          duration: 1000
+        });
+      </script>
+
+</body>
 </html>
